# ephemeral-file-share

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
src/: api.rs  encryption.rs  lib.rs  main.rs  network.rs  qr.rs  storage.rs
tests/: integration_test.rs
