[package]
name = "ephemeral-file-share"
version = "0.1.0"
edition = "2021"
description = "Peer-to-peer file sharing with end-to-end encryption and self-destructing links"
authors = ["EonHermes"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# P2P networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "kad", "identify", "dns"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

# QR code image generation
image = "0.24"

# WebRTC (for browser connectivity)
webrtc = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
